Docker final deployment
Fully uploaded the application to DockerHub

Downgraded from Java 23 to Java 18 in order to maximize compatibility with OpenJDK in the docker image (Maven stopped having official images with OpenJDK after the 18th version of OpenJDK).

Tested the webpage as a user while having it running on Docker.